# oss-sydr-fuzz

./: .gitignore  Dockerfile  README.md  TROPHIES.md  build.sh  convert_parsevocabulary_sydr.go  convert_parsevocabularyfromtokenizer_sydr.go  convert_tokenizer_fuzz.go  model_decode_sydr.go  model_encode_sydr.go  model_sentencepiece_fuzz.go  parser_parsefile_sydr.go  parser_parser_fuzz.go  server_layer_fuzz.go  server_manifest_fuzz.go  server_newlayer_sydr.go  server_parsenamedmanifest_sydr.go  thinking_addcontent_sydr.go  thinking_eat_sydr.go  thinking_parser_fuzz.go  thinking_parserstate_sydr.go
docker/ubuntu20.04-aarch64-sydr-fuzz/: Dockerfile
docker/ubuntu20.04-riscv64-sydr-fuzz/: Dockerfile
docker/ubuntu20.04-sydr-fuzz/: Dockerfile  javafuzz.patch
docker/ubuntu22.04-sydr-fuzz/: Dockerfile
ollama/parser/: build.sh
projects/behaviortreecpp/: Dockerfile  README.md  bb-lf.toml  bt-lf.toml  build.sh  get_cov.sh  script-lf.toml
projects/brotli/: .gitignore  Dockerfile  README.md  build.sh  decode-afl++.toml  decode-afl.toml  decode-lf.toml
projects/capstone/: Dockerfile  README.md  build.sh  fuzz_disasm-afl++.toml  fuzz_disasm-lf.toml  fuzz_disasm.toml  sydr-fuzz.toml
projects/capstone-rs/: Dockerfile  README.md  build_cov.sh  build_sydr.sh  sydr_target_disasm_x86_64.rs  target_disasm_x86_64-lf.toml  target_disasm_x86_64.toml
projects/cjson/: Dockerfile  README.md  build.sh  cjson-afl++.toml  cjson-lf.toml  cjson_read_sydr.c  sydr-fuzz-afl++-cmplog.toml  sydr-fuzz-afl++.toml  sydr-fuzz.toml
projects/cppsharp/: Dockerfile  Generator.cs  Parser.cs  Parser_fuzz.cs  Parser_sydr.cs  README.md  build.sh  dir.patch  fuzz.csproj  fuzz_gen.csproj  generate_cpp.toml  parse_cpp.toml  parser.csproj
projects/cpython3/: Dockerfile  README.md  binascii_a2b-afl++.toml  binascii_a2b-lf.toml  binascii_a2b.c  binascii_a2b.toml  build.sh  builtin_float-afl++.toml  builtin_float-lf.toml  builtin_float.c  builtin_int-afl++.toml  builtin_int-lf.toml  builtin_int.c  builtin_int.toml  builtin_unicode-afl++.toml  builtin_unicode-lf.toml  builtin_unicode.c  codecs_encode-afl++.toml  codecs_encode-lf.toml  codecs_encode.c  cov.sh  csv_reader-afl++.toml  csv_reader-lf.toml  csv_reader.c  csv_reader.toml  fuzz_binascii_a2b.toml  fuzz_builtin_float.toml  fuzz_builtin_int.toml  fuzz_builtin_unicode.toml  fuzz_codecs_encode.toml  fuzz_csv_reader.toml  fuzz_json_loads.toml  fuzz_sre_compile.toml  fuzz_sre_match.toml  fuzz_struct_unpack.toml  fuzz_tests.txt  fuzz_xml_parse.toml  fuzzer.c  json_loads-afl++.toml  json_loads-lf.toml  (+18 more)
projects/crunch/: Dockerfile  README.md  build.sh  main_single_file.py  main_single_file.toml  optimize_png.py  optimize_png.toml
projects/cxxfilt/: Dockerfile_libafl  README.md  cxxfilt-libafl.toml  patch
projects/eigen/: Dockerfile  README.md  basicstuff-afl++.toml  basicstuff-lf.toml  basicstuff_fuzzer.cc  build.sh  corpus_basicstuff.tar.xz  corpus_solver.tar.xz  solver-afl++.toml  solver-lf.toml  solver_fuzzer.cc
projects/expat/: Dockerfile  README.md  build.sh  xml_parse_fuzzer_ISO-8859-1-afl++.toml  xml_parse_fuzzer_ISO-8859-1-lf.toml  xml_parse_fuzzer_ISO-8859-1.toml  xml_parse_fuzzer_US-ASCII-afl++.toml  xml_parse_fuzzer_US-ASCII-lf.toml  xml_parse_fuzzer_US-ASCII.toml  xml_parse_fuzzer_UTF-16-afl++.toml  xml_parse_fuzzer_UTF-16-lf.toml  xml_parse_fuzzer_UTF-16.toml  xml_parse_fuzzer_UTF-16BE-afl++.toml  xml_parse_fuzzer_UTF-16BE-lf.toml  xml_parse_fuzzer_UTF-16BE.toml  xml_parse_fuzzer_UTF-16LE-afl++.toml  xml_parse_fuzzer_UTF-16LE-lf.toml  xml_parse_fuzzer_UTF-16LE.toml  xml_parse_fuzzer_UTF-8-afl++.toml  xml_parse_fuzzer_UTF-8-lf.toml  xml_parse_fuzzer_UTF-8.toml  xml_parsebuffer_fuzzer_ISO-8859-1-afl++.toml  xml_parsebuffer_fuzzer_ISO-8859-1-lf.toml  xml_parsebuffer_fuzzer_ISO-8859-1.toml  xml_parsebuffer_fuzzer_US-ASCII-afl++.toml  xml_parsebuffer_fuzzer_US-ASCII-lf.toml  xml_parsebuffer_fuzzer_US-ASCII.toml  xml_parsebuffer_fuzzer_UTF-16-afl++.toml  xml_parsebuffer_fuzzer_UTF-16-lf.toml  xml_parsebuffer_fuzzer_UTF-16.toml  (+9 more)
projects/gdb-command/build-config/: Cargo.toml
projects/goblin/build-config/: Cargo.toml  Cargo_fuzz.toml  Cargo_sydr.toml
projects/image-rs/fuzz-afl/: Cargo.toml
projects/image-rs/fuzz-afl/fuzzers/: fuzz_bmp.rs  fuzz_exr.rs  fuzz_gif.rs  fuzz_guess.rs  fuzz_hdr.rs  fuzz_ico.rs  fuzz_jpeg.rs  fuzz_png.rs  fuzz_tga.rs  fuzz_tiff.rs
projects/pytorch/: CMakeLists.txt  Dockerfile  README.md  build.sh  build_cov.sh  build_fuzz.sh  build_rpc_reproducer.sh  build_sydr.sh  class_parser-afl++.toml  class_parser-lf.toml  class_parser.cc  class_parser.toml  class_parser_fuzz.cc  dump.cc  dump.toml  dump_fuzz.cc  dump_sydr.cc  dump_toml  irparser-afl++.toml  irparser-lf.toml  irparser.cc  irparser.toml  jit_differential-afl++.toml  jit_differential-lf.toml  jit_differential.cc  jit_differential.toml  jit_differential_fuzz.cc  load-afl++.toml  load-lf.toml  load.cc  load.toml  load_fuzz.cc  load_sydr.cc  main-impl.cc  message_deserialize-afl++.toml  message_deserialize-lf.toml  message_deserialize.cc  message_deserialize.toml  message_deserialize_fuzz.cc  miniz.h  (+10 more)
projects/rizin/rz-fuzz/: main-impl.c  meson.build  rz-fuzz-afl.c  rz-fuzz-libfuzzer.c
projects/rust-regex/build-config/: Cargo.toml
projects/serde-json/build-config/: Cargo.toml
projects/vector-rs/fuzzing/: Cargo.toml
projects/vector-rs/fuzzing/in_aws/: seed
projects/vector-rs/fuzzing/in_csv/: id:000005,time:0,execs:0,orig:table_err.csv  id:000014,time:0,execs:0,orig:enrichment.csv  raw.csv  table_ok.csv
projects/vector-rs/fuzzing/in_json/: .rustc_info.json  lib-clap.json  lib-csv.json  lib-ena.json  lib-os_str_bytes.json  lib-peeking_take_while.json  lib-pest_generator.json  lib-ppv-lite86.json  lib-syslog_loose.json  lib-vrl-stdlib.json  tukey.json
projects/vector-rs/fuzzing/in_xml/: all.xml  masterdb.pdf.xml  modules.xml  parser.xml  policy.xml  test01.xml  test_xmpp.xml
projects/vector-rs/fuzzing/src/: .main.rs.swo  cov_aws.rs  cov_csv.rs  cov_json.rs  cov_klog.rs  cov_xml.rs  parse_aws.rs  parse_csv.rs  parse_json.rs  parse_klog.rs  parse_xml.rs
(+2329 files in other folders)
