[package]
name = "goblin-fuzz"
version = "0.0.1"
authors = ["Seo Sanghyeon <sanxiyn@gmail.com>"]
edition = "2018"
publish = false

[dependencies.goblin]
path = ".."

[profile.release]
debug = true
panic = 'abort'
overflow-checks = true

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "sydr_parse"
path = "fuzz_targets/sydr_parse.rs"

[[bin]]
name = "sydr_parse_elf"
path = "fuzz_targets/sydr_parse_elf.rs"
