cargo-features = ['named-profiles']

[package]
name = "regex-fuzz"
version = "0.0.0"
authors = ["David Korczynski <david@adalogics.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.1"

[dependencies.regex]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "sydr_regex_match"
path = "fuzz_targets/sydr_regex_match.rs"

[profile.release]
opt-level = 3
debug = true
panic = 'abort'
overflow-checks = true

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
debug = true
