[package]
name = "serde_json-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = { path = ".." }

[profile.release]
debug = true
panic = 'abort'
overflow-checks = true

[[bin]]
name = "sydr_from_slice"
path = "fuzz_targets/sydr_from_slice.rs"
test = false
doc = false

[workspace]
